// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONRPCBasicClientBaseProvider getAccount 1`] = `
Array [
  Object {
    "method": "getaccountstate",
    "params": Array [
      "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
    ],
  },
]
`;

exports[`JSONRPCBasicClientBaseProvider getAsset 1`] = `
Array [
  Object {
    "method": "getassetstate",
    "params": Array [
      "0xc56f33fc6ecfcd0c225c4ab356fee59390af8560be0e930faebe74a6daff7c9b",
    ],
  },
]
`;

exports[`JSONRPCBasicClientBaseProvider getBestBlockHash 1`] = `
Array [
  Object {
    "method": "getbestblockhash",
  },
]
`;

exports[`JSONRPCBasicClientBaseProvider getBlock 1`] = `
Array [
  Object {
    "method": "getblock",
    "params": Array [
      "0xc56f33fc6ecfcd0c225c4ab356fee59390af8560be0e930faebe74a6daff7c9b",
      1,
    ],
  },
]
`;

exports[`JSONRPCBasicClientBaseProvider getBlock 2`] = `
Array [
  Object {
    "method": "getblock",
    "params": Array [
      0,
      1,
    ],
  },
]
`;

exports[`JSONRPCBasicClientBaseProvider getBlockCount 1`] = `
Array [
  Object {
    "method": "getblockcount",
  },
]
`;

exports[`JSONRPCBasicClientBaseProvider getContract 1`] = `
Array [
  Object {
    "method": "getcontractstate",
    "params": Array [
      "0xcef0c0fdcfe7838eff6ff104f9cdec2922297537",
    ],
  },
]
`;

exports[`JSONRPCBasicClientBaseProvider getMemPool 1`] = `
Array [
  Object {
    "method": "getrawmempool",
  },
]
`;

exports[`JSONRPCBasicClientBaseProvider getStorage 1`] = `
Array [
  Object {
    "method": "getstorage",
    "params": Array [
      "0xcef0c0fdcfe7838eff6ff104f9cdec2922297537",
      "12",
    ],
  },
]
`;

exports[`JSONRPCBasicClientBaseProvider getTransaction 1`] = `
Array [
  Object {
    "method": "getrawtransaction",
    "params": Array [
      "0xc56f33fc6ecfcd0c225c4ab356fee59390af8560be0e930faebe74a6daff7c9b",
    ],
  },
]
`;

exports[`JSONRPCBasicClientBaseProvider getUnspentOutput 1`] = `
Array [
  Object {
    "method": "gettxout",
    "params": Array [
      "0xc56f33fc6ecfcd0c225c4ab356fee59390af8560be0e930faebe74a6daff7c9b",
      0,
    ],
  },
]
`;

exports[`JSONRPCBasicClientBaseProvider sendTransactionRaw 1`] = `
Array [
  Object {
    "method": "sendrawtransaction",
    "params": Array [
      "",
    ],
  },
]
`;

exports[`JSONRPCBasicClientBaseProvider testInvokeRaw 1`] = `
Array [
  Object {
    "method": "invokescript",
    "params": Array [
      "12",
    ],
  },
]
`;
